# FRESHLY_FISHY

./: README.md
backend/: build_yolo_notebook.py  fish-classifier-final.ipynb  main.py  prepare_training_data.py  pyproject.toml  requirements.txt  start.bat  test.py
frontend/: package-lock.json  package.json
