[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "onnxruntime>=1.18.0",
    "rembg>=2.0.74",
    "sqlalchemy>=2.0.49",
    "tensorflow>=2.21.0",
    "ultralytics>=8.4.33",
    "uvicorn>=0.43.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]
